freefem++ (1.45-7) testing unstable; urgency=low

  * FreeFem++-cs: faster graphics, grammar-driven highlighting,
    runtime error-line hihglighting.

 -- Antoine Le Hyaric <lehyaric@ann.jussieu.fr>  Wed, 02 Mar 2005 11:18:18 +0100
freefem++ (1.45-6) testing unstable; urgency=low

  * New upstream release

 -- Antoine Le Hyaric <lehyaric@ann.jussieu.fr>  Tue, 08 Feb 2005 14:20:59 +0100
freefem++ (1.44-9) testing unstable; urgency=low

  * Postscript files now work in FreeFem++-cs
  * New package release number and optimization type in binary package names
	
 -- Antoine Le Hyaric <lehyaric@ann.jussieu.fr>  Wed, 15 Dec 2004 17:32:13 +0100
freefem++ (1.44-8) testing unstable; urgency=low

  * FreeFem++-cs updated
	
 -- Antoine Le Hyaric <lehyaric@ann.jussieu.fr>  Fri, 26 Nov 2004 16:53:20 +0100
freefem++ (1.44-7) testing unstable; urgency=low

  * Added mpich binary package
	
 -- Antoine Le Hyaric <lehyaric@ann.jussieu.fr>  Fri, 19 Nov 2004 11:59:42 +0100
freefem++ (1.44-6) testing unstable; urgency=low

  * Created package for "testing" distribution
	
 -- Antoine Le Hyaric <lehyaric@ann.jussieu.fr>  Thu, 18 Nov 2004 10:39:46 +0100
freefem++ (1.44-5) unstable; urgency=low

  * Default package set to -x11
	
 -- Antoine Le Hyaric <lehyaric@ann.jussieu.fr>  Wed, 17 Nov 2004 15:36:08 +0100
freefem++ (1.44-4) unstable; urgency=low

  * Upstream bug fix: FreeFem++-cs-server was not called properly
    when FreeFem++-cs was started through an alias
	
 -- Antoine Le Hyaric <lehyaric@ann.jussieu.fr>  Wed, 17 Nov 2004 11:49:30 +0100
freefem++ (1.44-3) unstable; urgency=low

  * Bug correction: libarpack not found, added shlibs.local to fix this.
	
 -- Antoine Le Hyaric <lehyaric@ann.jussieu.fr>  Wed, 17 Nov 2004 10:47:51 +0100
freefem++ (1.44-2) unstable; urgency=low

  * Bug correction: FreeFem++-cs-server was missing from freefem++-cs package
	
 -- Antoine Le Hyaric <lehyaric@ann.jussieu.fr>  Wed, 17 Nov 2004 09:53:01 +0100
freefem++ (1.44-1) unstable; urgency=low
