@@ -5,13 +5,15 @@
 # $Id$
 
 find . -name Makefile.in -exec rm {} \;
-rm configure
-rm src/fflib/strversionnumber.cpp
-rm config.h.in
-rm src/ide/hl_lex.c++
-rm src/ide/hl_yacc.h
-rm src/ide/hl_yacc.c++
+
 rm HISTORY
-rm examples++/regtests.edp
-rm src/lglib/lg.tab.?pp
+rm config.h.in
+rm configure
 rm examples++-tutorial/all.edp
+rm examples++/all.edp
+rm examples++/regtests.edp
+rm src/fflib/strversionnumber.cpp
+rm src/ide/hl_lex.c++
+rm src/ide/hl_yacc.c++
+rm src/ide/hl_yacc.h
+rm src/lglib/lg.tab.?pp
